--- a/index.html
+++ b/index.html
@@ -4,14 +4,45 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Huerta</title>
-</head>
+
+  <link rel="stylesheet" href="style.css">
+</head> 
 <body>
 
-  <h1>Datos de la Huerta</h1>
+  <div class="titulo">
+    <h1>Huerta 2025</h1>
+  </div>
 
-  <p id="datos">Cargando...</p>
+  <h2 class="subtitulo">Datos de la Huerta</h2>
+
+  <div class="contenedor">
+
+    <div class="cuadro">
+      <h3>Temperatura</h3>
+      <p id="cuadro1">Cargando...</p>
+    </div>
+
+    <div class="cuadro">
+      <h3>Humedad del Aire</h3>
+      <p id="cuadro2">Cargando...</p>
+    </div>
+
+    <div class="cuadro">
+      <h3>Humedad del Suelo</h3>
+      <p id="cuadro3">Cargando...</p>
+    </div>
+
+  </div>
+  <div class="consejos">
+  <h3>Consejos para cuidar la huerta</h3>
+  <ul>
+    <li>Regar por la mañana</li>
+    <li>Usar compost natural</li>
+    <li>Controlar plagas con métodos orgánicos</li>
+  </ul>
+</div>
+
 
   <script type="module" src="app.js"></script>
 </body>
 </html>
-
